# s3upload_by_gscapi

./: pyproject.toml  requirements.txt  s3_upload.py
.config/: config.yaml
