[tool.poetry]
name = "s3upload-by-gscapi"
version = "0.1.0"
description = ""
authors = ["hongsre <hsg9156@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.109"
requests = "^2.32.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
